[package]
name = "vc-ltl-5-rust-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.i686-pc-windows-msvc.dependencies]
vc-ltl = "5.0.5"

[target.x86_64-pc-windows-msvc.dependencies]
vc-ltl = "5.0.5"

[target.aarch64-pc-windows-msvc.dependencies]
vc-ltl = "5.0.5"
